--- a/boards/telosb/Makefile.dep
+++ b/boards/telosb/Makefile.dep
@@ -1,3 +1,6 @@
 ifneq (,$(filter gnrc_netdev_default netdev_default,$(USEMODULE)))
   USEMODULE += cc2420
 endif
+ifneq (,$(filter saul_default,$(USEMODULE)))
+  USEMODULE += sht11
+endif
